2008-09-29  Sven Herzberg  <sven@imendio.com>

	Create libsapwood-client.la to be shared between the engine and the
	test cases

	* engine/Makefile.am: create libsapwood-client.la
	* tests/Makefile.am: link against libsapwood-client.la

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Moved the structure definition for the SapwoodPixmap into a private
	header

	* engine/Makefile.am: include the private header file
	* engine/sapwood-pixmap-priv.h: moved the structure definition to this
	file
	* engine/sapwood-pixmap.c: include the private header instead of the
	public one; dropped the structure definition
	* tests/double-free.c: include the private header file instead of
	using the copied structure definition

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Added files for reusable client code to connect to the server

	* engine/Makefile.am: added the files
	* engine/sapwood-client.c,
	* engine/sapwood-client.h: new skeletons

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Support the regular xvfb "output" of the testing framework

	* tests/double-free.c (main),
	* tests/sapwood-wrapper: drop the DISPLAY=:0.0 hacks

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Pass "make distcheck" again

	* server/Makefile.am: fixed the include path for the protocol header
	* tests/Makefile.am: fixed the reference to the wrapper script and
	distribute it with tarballs

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Fix warnings about double-assignment of EXTRA_DIST, append instead

	* demos/Makefile.am,
	* engine/Makefile.am: append to EXTRA_DIST instead of setting it

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Fix the test for the debugging flags.

	* configure.in: replace -eq (only integers) with == (strings)

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Fix "make check" finally

	* server/Makefile.am: don't perform abi checks anymore, it's only
	useful on the library

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Pass the ABI test

	* engine/sapwood-pixmap.h,