@@ -23,3 +23,12 @@
 
 #include "sapwood-client.h"
 
+GQuark
+sapwood_pixmap_error_get_quark (void)
+{
+  static GQuark q = 0;
+  if (!q)
+    q = g_quark_from_static_string ("sapwood-pixmap-error-quark");
+  return q;
+}
+
